# smartgit-translations

./: .dockerignore  .gitignore  README.ja.md  README.md  README_ja-JP.md  README_zh-CN.md  compose.yaml  pyproject.toml  setup.py
.github/workflows/: format-po-files.yml
docs/ja/: about_smartgit_properties.md
ja/: mapping_dev.zh_CN
po/: ja_JP.po  messages.pot  ru_RU.po  ru_RU_duplicated_entry.po  ru_RU_translated.po  zh_CN.po
src/: FuzzyFlag_GUIApp.py  PlaceHolderChecker.py  README.md  README_ja.md  __init__.py  commit_picker_dialog.py  ensure_colon_suffix.py  extract_changes.py  extract_changes.sh  extract_changes_git_gui.py  extract_duplicate_msgctxt.py  extract_untranslated_entry.py  format_po_files.py  format_pot_file.py  gui_tool_spec.md  import_mismatch.py  import_pot.py  import_unknown.py  msgid_msgstr_consistency_checker.py  po_editor_gui.py  po_maintenance_gui.py  po_merge.py  po_prefix_modifier.py  pochecker.py  pyproject.toml  requirements.txt  robust_format_po_files.py  setup_venv.bat
src/_docs/en/: development.md  scripts.md  setup_uv.md  setup_venv.md  usage.md
src/_docs/ja/: development.md  msgid_msgstr_consistency_checker.md  po_consistency_checker.md  scripts.md  setup_uv.md  setup_venv.md  usage.md
src/consistency_checker/: __init__.py  checker.py  cli.py  config.py  gui.py  i18n.py  messages.py  validators.py
src/consistency_checker/locale/: README.md  UPDATE_TRANSLATIONS.md
src/consistency_checker/locale/en/LC_MESSAGES/: messages.po
src/consistency_checker/locale/ja/LC_MESSAGES/: messages.po
src/consistency_checker/locale/ru/LC_MESSAGES/: messages.po
src/consistency_checker/locale/zh/LC_MESSAGES/: messages.po
src/path_finder/: __init__.py  po_path_finder.py
src/sgpo/: __init__.py  cli.py  sgpo.py  tui_helpers.py
src/sgpo_common/: __init__.py  sgpo_common.py
src/tests/: test_cli_cleanup.py  test_cli_properties.py  test_sgpo.py
tools/: pyproject.toml
tools/docker/: Dockerfile
tools/sgpo/: README.md  mkdocs.yml  pyproject.toml
tools/sgpo/docs/: api.md  index.md
tools/sgpo/src/: compress_msgctxt_msgid.py  delete_extracted_comments.py  extract_added_po_entries.py  import_pot.py  locale2po.py  master2pot.py  strip_msgctxt_placeholders.py
tools/sgpo/src/path_finder/: po_path_finder.py
tools/sgpo/src/sgpo/: __init__.py  actions.py  cli.py  sgpo.py  tui_helpers.py
tools/sgpo/src/sgpo_common/: sgpo_common.py
tools/sgpo/src/tests/: test_cli_cleanup.py  test_config_repo_candidates.py  test_locale2po.py  test_remove_duplicate_entries.py  test_sgpo.py  test_tui_menu.py
tools/sgpo/src/tests/data/test_sgpo/import_mismatch/: case_1_expected_result.pot
typings/rspolib/: __init__.pyi
