[project]
name = "smartgittranslations-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "rspolib>=0.1.1",
  "sgpo",
  "sgpo-migration",
  "sgpo-tools",
]

[tool.uv.sources]
sgpo = { workspace = true }
sgpo-migration = { workspace = true }
sgpo-tools = { workspace = true }

[tool.uv.workspace]
members = ["python/packages/*"]

[dependency-groups]
dev = [
    "pytest",
    "pyright>=1.1.407",
]
