[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgpo"
version = "0.1.0"
description = "Utility scripts for maintaining SmartGit localization PO/POT files."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
authors = [
  { name = "Syntevo GmbH" },
  { name = "SmartGit translators" },
]
dependencies = [
  "polib>=1.2",
  "pyparsing>=3.2",
  "questionary>=2.0.1",
]

[project.scripts]
sgpo = "sgpo.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]
ai = [
  "openai>=2.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "sgpo*",
  "sgpo_common*",
  "path_finder*",
  "sgv23_mapping*",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["src/tests"]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
]
